--- a/elements/CSS/style.css
+++ b/elements/CSS/style.css
@@ -10,6 +10,9 @@ bleu clair: #7A89B2*/
 .main section.page1 {
       background:#B2A27A;
     }
+
+
+
 /*  page 2 couleur:
 bleu clair: #999DA1
 marron : #544D3F
@@ -19,6 +22,14 @@ gris : #A19E99
 .main section.page2 {
       background:#999DA1;
     }
+
+
+
+
+
+
+
+
 /*  page 3 couleur:
 mauve: #A18898
 vert clair: #8AAD87
@@ -26,6 +37,10 @@ vert : #395436*/
 .main section.page3 {
       background:#A18898;
     }
+
+
+
+
 /*  page 4 couleur:
 vert :#8AAD87
 mauve :#603851
@@ -33,9 +48,14 @@ lilas :#B984A5*/
 .main section.page4 {
       background:#8AAD87;
     }
+
+
+
+
 /*  page form couleur:
 */
 .main section.form {
-      background-image:url(../img/contact.jpg);
+    background-image:url(../img/contact.jpg);
     background-size: cover;
+    opacity:0.8;
     }
