--- a/elements/CSS/style.css
+++ b/elements/CSS/style.css
@@ -38,7 +38,7 @@ body {
     font-size:29px;
 }
 .licence{
-    background-image:url(../img/lettres.png);
+    background-image:url(../img/book.png);
     background-position: left;
     background-size:70px;
     height:200px;
@@ -47,10 +47,10 @@ body {
 .licence p{
     margin-top:8%;
     font-size:22px;
-    margin-left:16%;
+    margin-left:22%;
 }
 .bac{
-    background-image:url(../img/diplome.png);
+    background-image:url(../img/graduation.png);
     background-position: left;
     background-size:70px;
     height:200px;
@@ -59,10 +59,10 @@ body {
 .bac p{
     margin-top:8%;
     font-size:22px;
-    margin-left:18%;
+    margin-left:22%;
 }
 .Serveuse{
-    background-image:url(../img/serveuse.png);
+    background-image:url(../img/people.png);
     background-position: left;
     background-size:90px;
     height:200px;
