--- a/elements/CSS/style.css
+++ b/elements/CSS/style.css
@@ -451,5 +451,6 @@ font-family: 'Rubik', sans-serif;
     padding-top:7vh;
     padding-left:2vw;
 }
-
+.explication { transition: all .2s ease-in-out; }
+.explication:hover { transform: scale(1.1); }
 
