--- a/elements/CSS/style.css
+++ b/elements/CSS/style.css
@@ -434,23 +434,29 @@ font-family: 'Rubik', sans-serif;
 .explication{
     background-color:#E83F6F;
     height:100vh;
-    width:10vw;
+    width:12vw;
     color:#E83F6F;
     font-family: 'Rubik', sans-serif;
-    font-size:20px;
+    font-size:18px;
 }
 .explication:hover{
     height:100vh;
-    width:25vw;
+    width:22vw;
     color:aliceblue;
 }
 .explication li{
     list-style:upper-roman;
+    margin-left:2vw;
 }
 .explication ul{
     padding-top:7vh;
     padding-left:2vw;
 }
-.explication { transition: all .2s ease-in-out; }
+.explication h4{
+    color:#FFF;
+}
+.explication { transition: all .4s ease-in-out; }
 .explication:hover { transform: scale(1.1); }
+
+
 
